tests/fail/missing_bracket_after_at.rs
use gpui_markup::ui;

fn main() {
    let _ = ui! {
        div @ {}
    };
}
